# testDjangoWorkflow

./: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.dev.yml  docker-compose.yml  manage.py  points_cleaned.geojson  pyproject.toml
mtaawetu/: asgi.py  settings.py  urls.py  wsgi.py
mtaawetu/core/utils/: collections.py  misc.py  settings.py
mtaawetu/settings/: __init__.py  base.py  custom.py  docker.py  envars.py  logging.py
mtaawetu/settings/templates/: settings.dev.py
mtaawetu_app/: admin.py  apps.py  models.py  storage.py  urls.py  views.py
mtaawetu_app/migrations/: 0001_initial.py  0002_alter_satisfaction_satisfaction_range.py  0003_amenities_amenity_type.py  0004_satisfaction_date_posted.py  0005_alter_satisfaction_date_posted.py  0006_rename_name_satisfaction_amenity.py  0007_research.py  0008_research_blob_alter_research_title.py  0009_alter_research_body.py  0010_notebook.py
scripts/: entrypoint.sh
static/: bootstrap.min.css  main.css  main.js  mainpage.css
staticfiles/: main.css  main.js
templates/: base.html
templates/content/: loading.html  research.html  researchpaper.html
templates/intro/: intro.html
templates/loaders/: mainpage.html
templates/notebooks/: notebook_detail.html  notebook_list.html
