[tool.poetry]
name = "mtaawetu"
version = "0.1.0"
description = ""
authors = ["John Ngugi  <66136743+john-ngugi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2-binary = "^2.9.9"
django-filter = "^24.2"
django-split-settings = "^1.3.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
colorlog = "^6.8.2"
channels = {extras = ["daphne"], version = "^4.1.0"}
folium = "^0.16.0"
geopandas = "^0.14.4"
sqlalchemy = "^2.0.30"
whitenoise = "^6.6.0"
branca = "^0.7.2"
django-cors-headers = "^4.4.0"
leafmap = "^0.34.5"
networkx = "^3.3"
osmnx = "^1.9.3"
r5py = "^0.1.1"
mapclassify = "^2.7.0"
django-ckeditor = "^6.7.1"
django-ckeditor-5 = "^0.2.13"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
